--- a/20191015_florida/prez_draft.html
+++ b/20191015_florida/prez_draft.html
@@ -4,7 +4,7 @@
     <title>&lt;font size=’15&gt;Bridging the Gap Between Science and Decision Making through Software Development and Data Integration</title>
     <meta charset="utf-8" />
     <meta name="author" content="Jessica L. BurnettResearch Ecologist, Mendenhall Postdoctoral Fellow" />
-    <meta name="date" content="2019-10-07" />
+    <meta name="date" content="2019-10-08" />
     <link rel="stylesheet" href="css/myFonts.css" type="text/css" />
     <link rel="stylesheet" href="css/myTheme.css" type="text/css" />
   </head>
@@ -15,7 +15,7 @@ class: center, middle, inverse, title-slide
 # &lt;font size=’15&gt;Bridging the Gap Between Science and Decision Making through Software Development and Data Integration</font>
 ### <font size='12'><strong>Jessica L. Burnett</strong></font></br></br><font size='6'>Research Ecologist, Mendenhall Postdoctoral Fellow</font>
 ### Science Analytics and Synthesis | Core Science Systems</br>U.S. Geological Survey, Lakewood CO
-### October 7, 2019
+### October 8, 2019
 
 ---
 
@@ -29,9 +29,7 @@ background-position: left 110px bottom 10px
 
 
 
-
-
-# Talk Outline
+# Talk Outline 
 1. Introduction/About Me
   - WEC Alumni (B.Sc., M.Sc.) &lt;!-- i think this is important to cover as it has shaped my career and research interests, plus, its fun and might make a little bit more relatable. --&gt;
   - Science Analytics &amp; Synthesis, Core Science Systems
@@ -42,11 +40,10 @@ background-position: left 110px bottom 10px
 1. Data and Software Product Development Efforts 
 1. Shameless self-promotion &lt;!-- shameless plugs, software, research --&gt;
 
-???
 
----
+--- 
 
-# About me 
+# About Me
 
 - A montage (four quadrats maybe...)
   - Q2: Me and Katie or pic of TUTI 
@@ -59,17 +56,18 @@ Either use four pictures, or just create one slide per job if I want to do paper
 
 ---
 
-# "Big Data" Ecology &amp; Ornithology  
+# 'Harnessing the Data Revolution in Ecology'
 
 ---
 
 
-# Integrated Modelling in Ecology  
+# Integrated Modelling in Ecology
+
 placeholder 
 
 ---
 
-# Integrated Population Modelling  
+# Integrated Population Modelling
 placebohlder
 
 ---
@@ -116,7 +114,7 @@ placebohlder
 ---
 
 
-# Core Science Analytics, Synthesis &amp; Libraries  
+# Core Science Analytics, Synthesis &amp; Libraries
 __Vision__: Synthesize and deliver Earth system data and information.
 
 --
@@ -135,6 +133,14 @@ __Mission__: Accelerate research and decisionmaking through data science, inform
 1. ESA 2020 : hopefully look out for an IPM session!
 1. NAOC 2020: bbs &amp; bbl symposium or special session
 
+---
+
+# Let's Chat
+
+1. Data integration
+  - Avian point counts + mark-recapture  + environemntal
+  - BBS + BBL
+1. 
 
 ---
 
