--- a/uflorida2019/presentation_uf_2019.html
+++ b/uflorida2019/presentation_uf_2019.html
@@ -29,31 +29,55 @@ background-position: left 110px bottom 10px
 
 
 
+# "Harnessing the Data Revolution in Ecology"
 
 
-# About Me
-
-- A montage (four quadrats maybe...)
-  - Q2: Me and Katie or pic of TUTI 
-  - Q1: 
-  - Q3: 
-  - Q4: 
 
 ???
-
-Either use four pictures, or just create one slide per job if I want to do papers produced
-
----
-
-# 'Harnessing the Data Revolution in Ecology'
+- I think the ESA 2020 theme is a telling sign of the increasing importance of data curation and management in ecology.
+- 
 
 ---
 
 
-# Integrated Modelling in Ecology
+# USGS Avian Monitoring Science Products
+&lt;!-- ## Breeding Bird Survey --&gt;
 
-lkjklh
+.left-column-half[
+&lt;img src="/images/bbs-hosp.png" width="100%" /&gt;
+]
+.right-column-half[
+&lt;img src="/images/bbs-fl-routes.png" width="100%" /&gt;
+]
 
+???
+1. __BBS__: 
+    - `\(&gt;\)` 4,000 roadside point counts
+    - population trends
+
+---
+
+# USGS Avian Monitoring Science Products
+.pull-left[
+## Bird Banding Lab
+&lt;img src="/images/gooseband.jpg" width="65%" /&gt;
+]
+
+--
+
+.pull-right[
+- sldkjfdslj
+- sldkfjsdkfj
+]
+
+???
+1. __BBS__: 
+
+---
+
+# Data Integration
+## Integrated modelling in ecology and beyond
+## CDI 
 
 ---
 
@@ -112,10 +136,9 @@ placebohlder for IPMs
 ---
 
 # Core Science Analytics, Synthesis &amp; Libraries
+&lt;/br&gt;
 __Vision__: Synthesize and deliver Earth system data and information.
-
---
-
+&lt;/br&gt;&lt;/br&gt;
 __Mission__: Accelerate research and decisionmaking through data science, information delivery, advanced computing, and biodiversity analytics.
 
 ???
@@ -125,6 +148,7 @@ __Mission__: Accelerate research and decisionmaking through data science, inform
 - Just being in this department as the only ecologist provides a unique opportunity for me to figure out how we, as fairly untrained ecologists, can streamline our data production and development -- putting me in a unique position to serve as 
 - This also allows me to learn how to further my skills as a translational ecology
 ---
+
 # Shameless Plugs
 1. R package: `bbsAssistant`  
 1. ESA 2020 : hopefully look out for an IPM session!
