--- a/uflorida2019/presentation_uf_2019.html
+++ b/uflorida2019/presentation_uf_2019.html
@@ -4,7 +4,7 @@
     <title>&lt;font size=’15&gt;Bridging the Gap Between Science and Decision Making Through Data Integration &amp; Software Development</title>
     <meta charset="utf-8" />
     <meta name="author" content="Jessica L. BurnettResearch Ecologist, Mendenhall Postdoctoral Fellow" />
-    <meta name="date" content="2019-10-09" />
+    <meta name="date" content="2019-10-11" />
     <link rel="stylesheet" href="css/myFonts.css" type="text/css" />
     <link rel="stylesheet" href="css/myTheme.css" type="text/css" />
   </head>
@@ -15,7 +15,7 @@ class: center, middle, inverse, title-slide
 # &lt;font size=’15&gt;Bridging the Gap Between Science and Decision Making Through Data Integration &amp; Software Development</font>
 ### <font size='12'><strong>Jessica L. Burnett</strong></font></br></br><font size='6'>Research Ecologist, Mendenhall Postdoctoral Fellow</font>
 ### Science Analytics and Synthesis | Core Science Systems</br>U.S. Geological Survey, Lakewood CO
-### October 9, 2019
+### October 11, 2019
 
 ---
 
@@ -28,17 +28,53 @@ background-position: left 110px bottom 10px
 ---
 
 
+# Harnessing the Data Revolution in Ecology*
 
-# "Harnessing the Data Revolution in Ecology"
-
-
-
-???
-- I think the ESA 2020 theme is a telling sign of the increasing importance of data curation and management in ecology.
-- 
+.footnote[[*] Ecological Society of America conference 2020 theme]
 
 ---
 
+# Data Product Flow  
+&lt;img src="/images/data_flow/slide1.png" width="100%" /&gt;
+
+---
+
+# Data Product Flow
+&lt;img src="/images/data_flow/slide2.png" width="100%" /&gt;
+
+---
+
+# Data Product Flow
+&lt;img src="/images/data_flow/slide3.png" width="100%" /&gt;
+
+---
+
+# Data Product Flow
+&lt;img src="/images/data_flow/slide4.png" width="100%" /&gt;
+
+---
+
+# Data Product Flow
+&lt;img src="/images/data_flow/slide5.png" width="100%" /&gt;
+
+---
+
+# Core Science Analytics, Synthesis &amp; Libraries
+&lt;/br&gt;
+__Vision__: Synthesize and deliver Earth system data and information.
+&lt;/br&gt;&lt;/br&gt;
+__Mission__: Accelerate research and decisionmaking through data science, information delivery, advanced computing, and biodiversity analytics.
+
+???
+
+- I am currently in an innovative branch of the USGS, in teh Core Science Systems mission area. 
+- Our team includes geologists, scientific and computer programmers, high performance computing teams, and an ecologist (raises hand)...
+- Just being in this department as the only ecologist provides a unique opportunity for me to figure out how we, as fairly untrained ecologists, can streamline our data production and development -- putting me in a unique position to serve as 
+- This also allows me to learn how to further my skills as a translational ecology
+---
+
+
+---
 
 # USGS Avian Monitoring Science Products
 &lt;!-- ## Breeding Bird Survey --&gt;
@@ -135,20 +171,6 @@ placebohlder for IPMs
 
 ---
 
-# Core Science Analytics, Synthesis &amp; Libraries
-&lt;/br&gt;
-__Vision__: Synthesize and deliver Earth system data and information.
-&lt;/br&gt;&lt;/br&gt;
-__Mission__: Accelerate research and decisionmaking through data science, information delivery, advanced computing, and biodiversity analytics.
-
-???
-
-- I am currently in an innovative branch of the USGS, in teh Core Science Systems mission area. 
-- Our team includes geologists, scientific and computer programmers, high performance computing teams, and an ecologist (raises hand)...
-- Just being in this department as the only ecologist provides a unique opportunity for me to figure out how we, as fairly untrained ecologists, can streamline our data production and development -- putting me in a unique position to serve as 
-- This also allows me to learn how to further my skills as a translational ecology
----
-
 # Shameless Plugs
 1. R package: `bbsAssistant`  
 1. ESA 2020 : hopefully look out for an IPM session!
@@ -178,6 +200,22 @@ __Mission__: Accelerate research and decisionmaking through data science, inform
 # References
 
 bleh
+
+---
+# Extra crap
+---
+# 2. My Past and Current Research Relies on Extant Monitoring Data
+.pull-left[
+
+]
+
+--
+
+.pull-right[
+&lt;img src="/images/phd-thesis.png" width="100%" /&gt;
+]
+
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
