--- a/uflorida2019/presentation_uf_2019.html
+++ b/uflorida2019/presentation_uf_2019.html
@@ -4,7 +4,7 @@
     <title>&lt;font size=’15&gt;Bridging the Gap Between Science and Decision Making Through Data Integration &amp; Software Development</title>
     <meta charset="utf-8" />
     <meta name="author" content="Jessica L. BurnettResearch Ecologist, Mendenhall Postdoctoral Fellow" />
-    <meta name="date" content="2019-10-11" />
+    <meta name="date" content="2019-10-12" />
     <link rel="stylesheet" href="css/myFonts.css" type="text/css" />
     <link rel="stylesheet" href="css/myTheme.css" type="text/css" />
   </head>
@@ -15,207 +15,180 @@ class: center, middle, inverse, title-slide
 # &lt;font size=’15&gt;Bridging the Gap Between Science and Decision Making Through Data Integration &amp; Software Development</font>
 ### <font size='12'><strong>Jessica L. Burnett</strong></font></br></br><font size='6'>Research Ecologist, Mendenhall Postdoctoral Fellow</font>
 ### Science Analytics and Synthesis | Core Science Systems</br>U.S. Geological Survey, Lakewood CO
-### October 11, 2019
+### October 12, 2019
 
 ---
-
 
 layout: true
 background-image: url(images/USGS_logo.png)
 background-size: 10%
 background-position: left 110px bottom 10px 
+---
+
+# &lt;!--Quote about models --&gt;
+&lt;/br&gt;
+
+
+&gt; 'Most models in ecology are inteded for other ecologists, cooked up by scientists for consumption by other scientists'   _Roughgarden (1979)_
+
+.footnote[[1] Theory of population genetics and evolutionary ecology: an introduction.]
+
+--
+- __data__
+
+--
+- __results__
+--
+
+- __papers__
+--
+
+- __presentations__
+
+
+???
+- I'd like to start my talk by relaying to you one of my favorite quotes from Joan Roughgarden: "most models in ecology are intended for other ecologists, cooked up by scientists, for consuption by other scientists". 
+- When I first came across this quote -- and it definitely was a mistake because I definitely was not reading her book when I found it! -- I couldnt get it out of my head. 
+- I think we can replace the word, models, here with other words, like 'data', 'results', 'articles', 'presentations', etc.
+---
+
+class: inverse, center, middle
+# About Me
+---
+# About Me
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/my_research.png" width="100%" /&gt;
+]
+
 
 ---
 
-
-# Harnessing the Data Revolution in Ecology*
-
-.footnote[[*] Ecological Society of America conference 2020 theme]
-
+class: inverse, center, middle
+# Data and Information Flow in Ecology:
+# Turning data into actionable knowledge
 ---
 
-# Data Product Flow  
-&lt;img src="/images/data_flow/slide1.png" width="100%" /&gt;
-
----
-
-# Data Product Flow
-&lt;img src="/images/data_flow/slide2.png" width="100%" /&gt;
-
----
-
-# Data Product Flow
-&lt;img src="/images/data_flow/slide3.png" width="100%" /&gt;
-
----
-
-# Data Product Flow
-&lt;img src="/images/data_flow/slide4.png" width="100%" /&gt;
-
----
-
-# Data Product Flow
-&lt;img src="/images/data_flow/slide5.png" width="100%" /&gt;
-
----
-
-# Core Science Analytics, Synthesis &amp; Libraries
+# Science Analytics &amp; Synthesis
 &lt;/br&gt;
 __Vision__: Synthesize and deliver Earth system data and information.
 &lt;/br&gt;&lt;/br&gt;
 __Mission__: Accelerate research and decisionmaking through data science, information delivery, advanced computing, and biodiversity analytics.
-
-???
-
-- I am currently in an innovative branch of the USGS, in teh Core Science Systems mission area. 
-- Our team includes geologists, scientific and computer programmers, high performance computing teams, and an ecologist (raises hand)...
-- Just being in this department as the only ecologist provides a unique opportunity for me to figure out how we, as fairly untrained ecologists, can streamline our data production and development -- putting me in a unique position to serve as 
-- This also allows me to learn how to further my skills as a translational ecology
 ---
-
-
----
-
-# USGS Avian Monitoring Science Products
-&lt;!-- ## Breeding Bird Survey --&gt;
-
-.left-column-half[
-&lt;img src="/images/bbs-hosp.png" width="100%" /&gt;
-]
-.right-column-half[
-&lt;img src="/images/bbs-fl-routes.png" width="100%" /&gt;
+.center[
+&lt;img src="/images/sas-datascience.jpg" width="90%" /&gt;
 ]
 
-???
-1. __BBS__: 
-    - `\(&gt;\)` 4,000 roadside point counts
-    - population trends
-
 ---
 
-# USGS Avian Monitoring Science Products
+# Harnessing the Data Revolution in Ecology
+
 .pull-left[
-## Bird Banding Lab
-&lt;img src="/images/gooseband.jpg" width="65%" /&gt;
+&lt;img src="/images/poisot2019.png" width="90%" /&gt;
 ]
-
 --
-
 .pull-right[
-- sldkjfdslj
-- sldkfjsdkfj
+&lt;img src="/images/fair.png" width="100%" /&gt;
 ]
 
 ???
-1. __BBS__: 
+- Next year's theme is ...
+- Not surprising given the amount and quality of data. 
+- However, there's still much work to be done, especially on front of open science. 
+- that is, full reproducibilty of our data, results, and other knowledge products
+- And I have recently joined a branch within the USGS which is leading efforts to achieve such a culture within relevant sciences. 
+
+---
+class: inverse, center, middle
+# Data and Knowledge Flow in Translational Ecology:
 
 ---
 
-# Data Integration
-## Integrated modelling in ecology and beyond
-## CDI 
-
----
-
-# Integrated Population Modelling
-
-placebohlder for IPMs
-
----
-
-# Maximizing Federal Science Products &amp; Translational Ecology
-
---
-
-1. Publications (academic and popular)
-
---
-
-1. Presentations/outreach
-
---
-
-1. Software
-
---
-
-1. Websites
-
-
-???
-
-- I would argue that most ecologists (largely attributed to the way academics and many federal researchers are evaluated) focus on publishing their work as peer-reviewed research articles. This is great, but there are ohter ways to dissemminate their work and to promote the utility of their data. However, this model is static. 
-- Another common step is to present research to different outlets, perhaps at various stages during the project's lifespan -- which may or may not influence the end product -- but unless these presentations occur at a stage of the project where feedback is easily incorporated -- the presentations are more or less self promotion (theres no shame in this as  Iw ill demonstrate at the end of this presentation...)
-*****
-- When projects are supported by stakeholders, if and how the product is beign used is a bit more obvious. 
-- For the huge science products, e.g. those that the USGS creates and hosts/publishes, figuring this out is a bit more difficult
-- Sure we can use web-based tracking metrics to figure this out, but 
-- Tis makes getting feedback on if where and how the data is being used, or the potential and missing links of this a little bit more difficult
-- My project at the usgs will attempt to tackle this issue, hopefully, in a few years time, having a roadmap for applied ecologists and those producing more basic data products a path for not ensuring, but increasing the probability that their data products are going ot be more broadly usefiul.
-
----
-
-# Iterative Feedback from End-users &amp; Decision Makers in the Data and Software Development
-- FAIR data
-- EarthMap
-- Avoid the path of 'make software then shove in the face'
-- Roadmap for research ecologists and modellers for efficiently gathering and incorporating end-user feedback into data products and tools
-- 
-
-???
-
-- E.g., what would it take (hours, time, networks) for a research ecologist to reach out to *potential* end users of the data or software product -- is it worth their time? Is there a way we can make this more efficient (this is more of a career goal i think). This requires a cultural shift
-- Moving beyond publish and perish model of data and software products -- I have seen this with my software already -- 
-- In a business model -- typically we wouldnt waste our time creating products that wouldnt be used -- sure, but we as research ecologists often in a bubble, create products in isolation, getting feedback from our immediate peers who are most likely __not__ end-users of the product, who say yes thats awesome you should definitely do that. But in the business model, we wouldnt spend time and money and resources creating a product without determining the utility of the product -- e.g. through focus groups. 
-
-
----
-
-# Shameless Plugs
-1. R package: `bbsAssistant`  
-1. ESA 2020 : hopefully look out for an IPM session!
-1. NAOC 2020: bbs &amp; bbl symposium or special session
-
----
-
-# Let's Chat
-
-1. Data integration
-  - Avian point counts + mark-recapture  + environemntal
-  - BBS + BBL
-1. 
-
----
-
-# Acknowledgements
-
-.pull-left[## Collaborators
-
+# Data and Knowledge Flow
+.center[
+&lt;img src="/images/use_continuum/Slide1.png" width="100%" /&gt;
 ]
-.pull-right[## BBS &amp; BBL Team &amp; Participatory Scientists 
+.footnote[[*] Ecological Society of America conference 2020 theme]
+---
+
+# Incorporating Practitioner Needs
+.center[
+&lt;img src="/images/use_continuum/Slide2.png" width="100%" /&gt;
+]
+---
+
+# Incorporating Decision Making Needs
+ 
+.center[
+&lt;img src="/images/use_continuum/Slide3.png" width="100%" /&gt;
+]
+---
+# Project Overview 
+.center[
+&lt;img src="/images/use_continuum/Slide4.png" width="100%" /&gt;
+]
+---
+# Project Overview 
+.center[
+&lt;img src="/images/use_continuum/Slide5.png" width="100%" /&gt;
+]
+---
+# Project Overview 
+.center[
+&lt;img src="/images/use_continuum/Slide6.png" width="100%" /&gt;
+]
+---
+# Project Overview 
+.center[
+&lt;img src="/images/use_continuum/Slide7.png" width="100%" /&gt;
+]
+---
+# Project Overview 
+.center[
+&lt;img src="/images/use_continuum/Slide8.png" width="100%" /&gt;
+]
+
+---
+# Project Overview 
+.center[
+&lt;img src="/images/use_continuum/Slide9.png" width="100%" /&gt;
 ]
 
 ---
 
-# References
-
-bleh
-
----
-# Extra crap
----
-# 2. My Past and Current Research Relies on Extant Monitoring Data
+# Data: Breeding Bird Surveys (USGS)
 .pull-left[
+&lt;img src="/images/bbs-logo.jpg" width="65%" /&gt;
 
+&lt;img src="/images/robbins.jpg" width="65%" /&gt;
 ]
 
 --
 
-.pull-right[
-&lt;img src="/images/phd-thesis.png" width="100%" /&gt;
+.pull-right[ &lt;/br&gt;
+## Distributions
+## Status
+## Trends
 ]
+---
+# Data: Bird Encounters (USGS)
+.pull-left[
+&lt;img src="/images/gooseband.jpg" width="100%" /&gt;
+]
+.pull-right[ &lt;/br&gt;
+## distributions
+## status
+## trends
+
+]
+---
+
+# Integrated Models
+&lt;img src="/images/.png" width="100%" /&gt;
 
 ---
+
+# Integrated Population Models
+&lt;img src="/images/ipm.png" width="100%" /&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
