--- a/uflorida2019/presentation_uf_2019.html
+++ b/uflorida2019/presentation_uf_2019.html
@@ -25,7 +25,7 @@ background-size: 10%
 background-position: left 110px bottom 10px 
 ---
 
-# &lt;!--Quote about models --&gt;
+# &lt;!--Quote about models--&gt;
 &lt;/br&gt;
 
 
@@ -51,20 +51,91 @@ background-position: left 110px bottom 10px
 - When I first came across this quote -- and it definitely was a mistake because I definitely was not reading her book when I found it! -- I couldnt get it out of my head. 
 - I think we can replace the word, models, here with other words, like 'data', 'results', 'articles', 'presentations', etc.
 ---
-
 class: inverse, center, middle
-# About Me
+# Past and Ongoing Research 
+
 ---
-# About Me
+
+# &lt;!--My work build --&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
-&lt;img src="/images/my_research.png" width="100%" /&gt;
+&lt;img src="/images/efforts/Slide02.png" width="100%" /&gt;
 ]
 
+---
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide03.png" width="100%" /&gt;
+]
+
+---
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide04.png" width="100%" /&gt;
+]
+
+---
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide05.png" width="100%" /&gt;
+]
+
+---
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide06.png" width="100%" /&gt;
+]
+
+---
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide08.png" width="100%" /&gt;
+]
 
 ---
 
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide09.png" width="100%" /&gt;
+]
+
+---
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide10.png" width="100%" /&gt;
+]
+
+---
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide11.png" width="100%" /&gt;
+]
+
+---
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide12.png" width="100%" /&gt;
+]
+
+---
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide13.png" width="100%" /&gt;
+]
+
+---
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/efforts/Slide14.png" width="100%" /&gt;
+]
+
+---
+
+# &lt;!--My work build --&gt; 
+.center[&lt;/br&gt;&lt;/br&gt;&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/my_research.png" width="100%" /&gt;
+]
+---
 class: inverse, center, middle
-# Data and Information Flow in Ecology:
 # Turning data into actionable knowledge
 ---
 
@@ -77,6 +148,9 @@ __Mission__: Accelerate research and decisionmaking through data science, inform
 .center[
 &lt;img src="/images/sas-datascience.jpg" width="90%" /&gt;
 ]
+???
+- Briefly, I am in a group of the Core Science Systems mission area of the USGS called Science Analytics and Synthesis. 
+- Our group comprises 
 
 ---
 
@@ -99,28 +173,39 @@ __Mission__: Accelerate research and decisionmaking through data science, inform
 
 ---
 class: inverse, center, middle
-# Data and Knowledge Flow in Translational Ecology:
-
+# Abandoning a Linear Flow of Ecological Data and Knowledge Flow
 ---
-
-# Data and Knowledge Flow
+# Data and Science Products Often Flow Linearly
 .center[
 &lt;img src="/images/use_continuum/Slide1.png" width="100%" /&gt;
 ]
 .footnote[[*] Ecological Society of America conference 2020 theme]
+???
+- A typical trajectory of a science or data product flows from you, the data collector, curator, or manager --&gt; research community --&gt; maybe to practiioners
+- If you're either lucky or the product is vital or really amazing, maybe it will trickle up to decision makers?
 ---
-
-# Incorporating Practitioner Needs
+# Data and Science Products Often Flow Linearly
 .center[
 &lt;img src="/images/use_continuum/Slide2.png" width="100%" /&gt;
 ]
+???
+- But how often do practitioners influence your science?
+- How often do you hear from praxctitioners?
 ---
-
-# Incorporating Decision Making Needs
- 
+# Data and Science Products Often Flow Linearly
 .center[
 &lt;img src="/images/use_continuum/Slide3.png" width="100%" /&gt;
 ]
+???
+- Or how often do you seek feedback or try to identify the needs of end users?
+- If never or rarely, there's reasonable explanations - 
+  - perhaps you conduct basic research, or are a natural historian
+  - or maybe this is an overwhelming task that may not necessarily be rewarded within your community or profession?
+- There's a reason for these question marks -- __this is a daunting task!__
+- 
+---
+class: inverse, middle, center
+# 
 ---
 # Project Overview 
 .center[
@@ -155,17 +240,25 @@ class: inverse, center, middle
 
 ---
 
+class:inverse, middle, center
+# Integrated Population Modelling
+???
+- Over the course of my postdoc, I will be 
+Itegrated population models 
+---
+# Integrated Population Models
+&lt;img src="/images/ipm.png" width="100%" /&gt;
+---
+
 # Data: Breeding Bird Surveys (USGS)
 .pull-left[
 &lt;img src="/images/bbs-logo.jpg" width="65%" /&gt;
 
 &lt;img src="/images/robbins.jpg" width="65%" /&gt;
 ]
-
 --
-
 .pull-right[ &lt;/br&gt;
-## Distributions
+## Distribution
 ## Status
 ## Trends
 ]
@@ -175,20 +268,26 @@ class: inverse, center, middle
 &lt;img src="/images/gooseband.jpg" width="100%" /&gt;
 ]
 .pull-right[ &lt;/br&gt;
-## distributions
-## status
-## trends
-
+## Demographic parameters
+## Distribution
 ]
 ---
 
-# Integrated Models
-&lt;img src="/images/.png" width="100%" /&gt;
+# Producing Actionable Science
+&lt;/br&gt;&lt;/br&gt;&lt;/br&gt;
+&lt;img src="/images/quote_manager.png" width="100%" /&gt;
+.footnote[Roux DJ, Rogers KH, Biggs H, Ashton PJ, Sergeant A. Bridging the science-management divide: Moving from unidirectional knowledge transfer to knowledge interfacing and sharing.]
 
 ---
 
-# Integrated Population Models
-&lt;img src="/images/ipm.png" width="100%" /&gt;
+# Translational Ecology
+"the best teams are interdisciplinary and include members of the end-user community"
+
+---
+class: inverse, center, middle
+# Fostering Communication Amongst Research, Practice, and Decision-making
+
+---
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
