--- a/uflorida2019/presentation_uf_2019.html
+++ b/uflorida2019/presentation_uf_2019.html
@@ -25,37 +25,6 @@ background-size: 10%
 background-position: left 110px bottom 10px 
 ---
 
-# &lt;!--Quote about models--&gt;
-&lt;/br&gt;
-
-
-&gt; 'Most models in ecology are inteded for other ecologists, cooked up by scientists for consumption by other scientists'   _Roughgarden (1979)_
-
-.footnote[[1] Theory of population genetics and evolutionary ecology: an introduction.]
-
---
-- __data__
-
---
-- __results__
---
-
-- __papers__
---
-
-- __presentations__
-
-
-???
-- I'd like to start my talk by relaying to you one of my favorite quotes from Joan Roughgarden: "most models in ecology are intended for other ecologists, cooked up by scientists, for consuption by other scientists". 
-- When I first came across this quote -- and it definitely was a mistake because I definitely was not reading her book when I found it! -- I couldnt get it out of my head. 
-- I think we can replace the word, models, here with other words, like 'data', 'results', 'articles', 'presentations', etc.
----
-class: inverse, center, middle
-# Past and Ongoing Research 
-
----
-
 # &lt;!--My work build --&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide02.png" width="100%" /&gt;
@@ -127,53 +96,11 @@ class: inverse, center, middle
 .center[&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/efforts/Slide14.png" width="100%" /&gt;
 ]
-
 ---
-
-# &lt;!--My work build --&gt; 
+# &lt;!--Data Flow1--&gt; 
 .center[&lt;/br&gt;&lt;/br&gt;&lt;/br&gt;&lt;/br&gt;
 &lt;img src="/images/my_research.png" width="100%" /&gt;
 ]
----
-class: inverse, center, middle
-# Turning data into actionable knowledge
----
-
-# Science Analytics &amp; Synthesis
-&lt;/br&gt;
-__Vision__: Synthesize and deliver Earth system data and information.
-&lt;/br&gt;&lt;/br&gt;
-__Mission__: Accelerate research and decisionmaking through data science, information delivery, advanced computing, and biodiversity analytics.
----
-.center[
-&lt;img src="/images/sas-datascience.jpg" width="90%" /&gt;
-]
-???
-- Briefly, I am in a group of the Core Science Systems mission area of the USGS called Science Analytics and Synthesis. 
-- Our group comprises 
-
----
-
-# Harnessing the Data Revolution in Ecology
-
-.pull-left[
-&lt;img src="/images/poisot2019.png" width="90%" /&gt;
-]
---
-.pull-right[
-&lt;img src="/images/fair.png" width="100%" /&gt;
-]
-
-???
-- Next year's theme is ...
-- Not surprising given the amount and quality of data. 
-- However, there's still much work to be done, especially on front of open science. 
-- that is, full reproducibilty of our data, results, and other knowledge products
-- And I have recently joined a branch within the USGS which is leading efforts to achieve such a culture within relevant sciences. 
-
----
-class: inverse, center, middle
-# Abandoning a Linear Flow of Ecological Data and Knowledge Flow
 ---
 # Data and Science Products Often Flow Linearly
 .center[
@@ -207,44 +134,110 @@ class: inverse, center, middle
 class: inverse, middle, center
 # 
 ---
-# Project Overview 
+# &lt;!--Roughgarden Quote--&gt;
+&lt;/br&gt;&lt;/br&gt;&lt;/br&gt;
+&gt; 'Most models in ecology are inteded for other ecologists, cooked up by scientists for consumption by other scientists'   _Roughgarden (1979)_  
+
+.footnote[[1] Theory of population genetics and evolutionary ecology: an introduction.]
+--
+- __data__
+
+--
+- __results__
+--
+
+- __papers__
+--
+
+- __presentations__
+
+
+???
+- I'd like to start my talk by relaying to you one of my favorite quotes from Joan Roughgarden: "most models in ecology are intended for other ecologists, cooked up by scientists, for consuption by other scientists". 
+- When I first came across this quote -- and it definitely was a mistake because I definitely was not reading her book when I found it! -- I couldnt get it out of my head. 
+- I think we can replace the word, models, here with other words, like 'data', 'results', 'articles', 'presentations', etc.
+---
+# USGS Science Analytics &amp; Synthesis
+&lt;/br&gt;
+__Vision__: Synthesize and deliver Earth system data and information.
+&lt;/br&gt;&lt;/br&gt;
+__Mission__: Accelerate research and decisionmaking through data science, information delivery, advanced computing, and biodiversity analytics.
+---
+.center[
+&lt;img src="/images/sas-datascience.jpg" width="90%" /&gt;
+]
+???
+- I recently (about 4 weeks ago today!) began a postdoc with the US Geological Survey
+- I'd love to give you a brief overview of the mission area and branch that I am in, because 
+    - I think it's a truly unique team, creating high impact foundational science products 
+    - AND 
+- Briefly, I am in a group of the Core Science Systems mission area of the USGS called Science Analytics and Synthesis. 
+---
+
+# Harnessing the Data Revolution in Ecology
+
+.pull-left[
+&lt;img src="/images/poisot2019.png" width="90%" /&gt;
+]
+--
+.pull-right[
+&lt;img src="/images/fair.png" width="100%" /&gt;
+]
+
+???
+- Next year's theme is ...
+- Not surprising given the amount and quality of data. 
+- However, there's still much work to be done, especially on front of open science. 
+- that is, full reproducibilty of our data, results, and other knowledge products
+- And I have recently joined a branch within the USGS which is leading efforts to achieve such a culture within relevant sciences. 
+
+---
+class: inverse, center, middle
+class: inverse, center, middle
+# Abandoning a Linear Flow of Ecological Data and Knowledge Flow
+---
+# Project Overview &lt;!--1--&gt;
 .center[
 &lt;img src="/images/use_continuum/Slide4.png" width="100%" /&gt;
 ]
 ---
-# Project Overview 
+# Project Overview &lt;!--2--&gt;
 .center[
 &lt;img src="/images/use_continuum/Slide5.png" width="100%" /&gt;
 ]
 ---
-# Project Overview 
+# Project Overview &lt;!--3--&gt;
 .center[
 &lt;img src="/images/use_continuum/Slide6.png" width="100%" /&gt;
 ]
 ---
-# Project Overview 
+# Project Overview &lt;!--4--&gt;
 .center[
 &lt;img src="/images/use_continuum/Slide7.png" width="100%" /&gt;
 ]
 ---
-# Project Overview 
+# Project Overview &lt;!--5--&gt;
 .center[
 &lt;img src="/images/use_continuum/Slide8.png" width="100%" /&gt;
 ]
 
 ---
-# Project Overview 
+# Project Overview &lt;!--6--&gt;
 .center[
 &lt;img src="/images/use_continuum/Slide9.png" width="100%" /&gt;
 ]
 
 ---
 
-class:inverse, middle, center
-# Integrated Population Modelling
+class:inverse, middle, left
+# 1. Data Integration
+# 2. Integrated Population Models
+# 3. Software
+# 4. End-user Needs
 ???
+- 
 - Over the course of my postdoc, I will be 
-Itegrated population models 
+
 ---
 # Integrated Population Models
 &lt;img src="/images/ipm.png" width="100%" /&gt;
