--- a/uflorida2019/presentation_uf_2019.html
+++ b/uflorida2019/presentation_uf_2019.html
@@ -281,6 +281,10 @@ class: inverse, center, middle
 # Fostering Communication Amongst Research, Practice, and Decision-making
 
 ---
+
+
+---
+&lt;!-- Lowndes, J.S.S., Best, B.D., Scarborough, C., Afflerbach, J.C., Frazier, M.R., O’Hara, C.C., Jiang, N. and Halpern, B.S., 2017. Our path to better science in less time using open data science tools. Nature ecology &amp; evolution, 1(6), p.0160. --&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
